2001-12-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02666] resizing on xterm with gpm support
	* terms.c (mouse_init): check Gpm_Open return value, signal(SIGWINCH)

2001-12-16  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02664] install-sh -s option
	* XMakefile: install-sh -s
	* install-sh: support strip option

2001-12-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02663] fix prevA() cause loop
	* table.c (do_refill): force flushline
	* table.c (feed_table_tag): push line if <a> has no href attr

2001-12-15  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02659] rc.c (show_srch_str)
	* fm.h (show_srch_str): added
	* main.c (srch_nxtprv): check show_srch_str
	* rc.c (CMT_SHOW_SRCH_STR): added

2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02657] 
	* main.c (chkURL): accept URL ending with '='

2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02656]
	* XMakefile (clean): remove functable.c
	* anchor.c (_put_anchor_new): use Strnew_size() and Strcat_charp_n()
	* indep.c (getescapechar): use GET_MYCDIGIT

2001-12-13  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02541] mouse support on cygwin
	* linein.c (_esc): ignore ESC M <ch> <ch> <ch> on cygwin
	* terms.c (is_xterm): not static on cygwin
	* terms.c (ConInV): INPUT_RECORD * -> char *
	* terms.c (MouseConToXTerm): deleted
	* terms.c (iMouseConXTerm): deleted
	* terms.c (expand_win32_console_input_buffer): added
	* terms.c (read_win32_console_input): use PeekConsoleInput 
						and ReadConsole
	* terms.c (read_win32_console): use read_win32_console_input()
	* terms.c (cmp_tv): added
	* terms.c (subtract_tv): added
	* terms.c (select_or_poll_win32_console): added
	* terms.c (select_win32_console): added
	* terms.c (xterm_mouse_term): deleted
	* terms.c (mouse_term_info): added
	* terms.c (set_tty): modified to use mouse_term_info
	* terms.c (sleep_till_anykey): use select_win32_console on cygwin
	* terms.c (mouse_init): check is_xterm flag